--- a/SpaceOdyssey/SpaceOdyssey.vcxproj
+++ b/SpaceOdyssey/SpaceOdyssey.vcxproj
@@ -143,13 +143,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="MovingObject.cpp" />
-    <ClCompile Include="Rocket.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="SpaceOdyssey.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Game.h" />
     <ClInclude Include="MovingObject.h" />
-    <ClInclude Include="Rocket.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
